syntax = "proto3";

package testing;
// import "google/api/annotations.proto";

option go_package = "./user";

message GetUserRequest {
  string user_id = 1;
}

message GenerateTokenRequest {
  string email = 1;
  string password = 2;
}

message GetAllUserRequest {
}

message AddUserRequest {
  string name = 1;
  int32 age = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message User {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
  string password = 5;
}


service UserDataku {
  rpc GetUserData(GetUserRequest) returns (User);
  // rpc GetAllData(GetAllUserRequest) returns (GetAllUserResponse) {
  //   option (google.api.http) = {
  //     post: "/v1/users"
  //     body: "*"
  //   };
  // }
  rpc GetAllData(GetAllUserRequest) returns (GetAllUserResponse) {}
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc AuthUser (AuthRequest) returns (AuthResponse) {}
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse) {};
}

message AuthResponse {
  string token = 1;
}

message GetAllUserResponse {
  repeated User data = 1;
}

message AddUserResponse {
  string id = 1;
  int32 age = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserResponse {
  string message = 1;
}

message GenerateTokenResponse {
  string token = 1;
}

